KBS/platforms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-depl
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
        - name: platformservice
          image: khoizpro7/platformservice:latest
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: platforms-clusterip-srv
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: platformgrpc
      protocol: TCP
      port: 666
      targetPort: 666
